[package]
name = "implementing-comprehensive-study-of-crdts"
authors = ["Haruki Jay Shimada <peaske16180@gmail.com>"]
description = """
A Rust implementation of the concepts outlined in the paper: 
A Comprehensive Study of Convergent and Commutative Replicated Data Types
"""
edition = "2021"
version = "0.1.0"
